--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@ header {
   background-color: #333;
   color: #fff;
   padding: 1rem 2rem;
+  position: sticky;
+  top: 0%;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 
 .nav-links {
@@ -84,7 +87,8 @@ nav {
 .about h2,
 .services h2,
 .features h2,
-.testimonials h2 {
+.testimonials h2,
+.contact h2 {
   font-size: 2.5rem;
   margin-bottom: 2rem;
 }
